feat: :sparkles: Test Mode
Added a `testMode` variable into config.json

--- a/config-template.json
+++ b/config-template.json
@@ -1,5 +1,6 @@
 {
-	"clientId": "123456789012345678",
-	"guildId": "12341234123412341234",
-	"token": "your-token-goes-here"
+  "clientId": "123456789012345678",
+  "guildId": "12341234123412341234",
+  "token": "your-token-goes-here",
+  "testMode": true
 }
